# ai-automation-framework-with-8-layers

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai_automation_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
aiauto/: __init__.py  cli.py
aiauto/common/: io.py  metrics.py  registry.py  reporters.py
aiauto/config/: project.yaml
aiauto/suites/contract/: api_contract_tests.py
aiauto/suites/data_validation/: run_ge.py
aiauto/suites/drift/: run_evidently.py
aiauto/suites/explain/: run_shap.py
aiauto/suites/model_eval/: evaluate.py  rag_pipeline.py
aiauto/suites/ui/compare/: agent_factory.py  browser_controller.py  scenario1.py
aiauto/suites/ui/rag_validation/: scenario2_rag_validation.py
datasets/: policy_sample.txt
files/: chat_conversation.csv
logs/: compare_dialog.xlsx
reports/: scenario1_report.html
tests/: test_data_validation.py  test_drift.py  test_model_eval.py  test_ui_scenario1.py  test_ui_scenario2_rag.py
